fixing icon and adding more contrast to buttons

--- a/style.css
+++ b/style.css
@@ -798,12 +798,12 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF;
+    color: #364577;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956;
-    color: #FFFFFF;
+    color: #364577;
 }
 
 .ltc-white {
